<resources>
    <string name="app_name">Traveler</string>
    <string name="add_flight_message">Enter your flight details below to receive the latest updates and personalize your
        experience
    </string>
    <string name="sdk_endpoint_setting">Endpoint for Traveler API</string>
    <string name="auth_endpoint_setting">Endpoint for authentication API</string>
    <string name="sdk_endpoint">SDK Endpoint</string>
    <string name="auth_endpoint">Auth Endpoint</string>
    <string name="flight_search_error">Invalid flight number</string>
    <string name="flight_number">Flight Number</string>
    <string name="departure_date">Departure Date</string>
    <string name="search_flights">Search Flights</string>
    <string name="empty_date_error">Date must not be empty</string>

    <string name="no_flight_found_primary">No flights found</string>
    <string name="no_flights_found_secondary">Please try again with a different flight number or departure date</string>

    <string name="retry">Retry</string>
    <string name="oh_no">Oh No!</string>
    <string name="something_went_wrong">Unfortunately something went wrong :(</string>
    <string name="ok">OK</string>
    <string name="add_flight">Add Flight</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="support">Support</string>
    <string name="about">About</string>
    <string name="faq">FAQ</string>
    <string name="legal">Legal Information</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="required">This field is required.</string>
    <string name="description_profile_pic">Profile picture</string>
    <string name="description_navigate_back">Go back to the previous screen</string>
    <string name="description_cancel_edit_profile">Cancel editing profiles.</string>
    <string name="app_version">App version %s</string>
    <string name="invalid_email">Invalid email pattern</string>
    <string name="confirm_sign_out">Confirm sign out?</string>
    <string name="confirm">Confirm</string>
    <string name="sign_out_msg">Your order history will only be visible once you sign in.</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="cancelled">Cancelled</string>
    <string name="unsaved_changes_lost">All unsaved changes will be lost.</string>
    <string name="saved_list">Saved List</string>
    <string name="log_out">Log out</string>

    <string name="itinerary">Itinerary</string>

</resources>
