<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin">

    <TextView
            android:id="@+id/textView_flightCard_departureLabel"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_flightCard_departureCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Tokyo"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_departureLabel"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_flightCard_departureIata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="HND"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_departureCity"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_flightCard_departureTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            tools:text="13:35"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_departureIata"
            android:textAppearance="?attr/textAppearanceListItem"/>


    <TextView
            android:id="@+id/textView_flightCard_arrivalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureLabel"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_flightCard_arrivalCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Toronto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_arrivalLabel"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureCity"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_catalog_arrivalIata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="YYZ"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_arrivalCity"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureIata"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_flightCard_arrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="16:55"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_catalog_arrivalIata"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureTime"
            android:textAppearance="?attr/textAppearanceListItem"/>

    <TextView
            android:id="@+id/textView_flightCard_addFlight"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_arrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/add_flight"
            android:textColor="@color/colorLink"/>

</androidx.constraintlayout.widget.ConstraintLayout>
