<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/text_margin">

    <TextView
            android:id="@+id/textView_flightCard_departureLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/departure"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <TextView
            android:id="@+id/textView_flightCard_departureCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            android:layout_marginTop="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_departureLabel"
            tools:text="Tokyo"/>

    <TextView
            android:id="@+id/textView_flightCard_departureIata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_departureCity"
            tools:text="HND"/>

    <TextView
            android:id="@+id/textView_flightCard_departureTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_departureIata"
            tools:text="13:35"/>


    <TextView
            android:id="@+id/textView_flightCard_arrivalLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrival"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureLabel"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:id="@+id/textView_flightCard_arrivalCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_arrivalLabel"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureCity"
            tools:text="Toronto"/>

    <TextView
            android:id="@+id/textView_catalog_arrivalIata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_arrivalCity"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureIata"
            tools:text="YYZ"/>

    <TextView
            android:id="@+id/textView_flightCard_arrivalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="?attr/textAppearanceListItem"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_catalog_arrivalIata"
            app:layout_constraintBaseline_toBaselineOf="@id/textView_flightCard_departureTime"
            tools:text="16:55"/>


    <Button
            style="@style/TextButton.Primary"
            android:id="@+id/button_flightCard_addFlight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_normal"
            android:layout_marginTop="@dimen/margin_default"
            android:text="@string/add_flight"
            app:layout_constraintTop_toBottomOf="@+id/textView_flightCard_arrivalTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
