<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".activities.ProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="288dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar_profile_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:background="@drawable/bg_profile_gradient"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:expandedTitleGravity="bottom|center_horizontal"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp"
                app:title="@string/profile">

            <ImageView
                    android:id="@+id/imageView_profile_userPicture"
                    app:layout_collapseMode="parallax"
                    android:layout_gravity="center"
                    android:layout_width="144dp"
                    android:src="@drawable/ic_edit_white_24dp"
                    android:layout_height="144dp"/>

            <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin">

                <ImageButton
                        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                        android:id="@+id/imageButton_profile_settings"
                        android:clickable="true"
                        android:focusable="true"
                        android:layout_gravity="end"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_settings_white_24dp"
                        android:contentDescription="@string/settings"/>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/Button.Primary"
            android:id="@+id/fab_profile_editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit_white_24dp"
            android:layout_margin="@dimen/margin_default"
            app:layout_anchor="@id/scrollView_profile_container"
            app:layout_anchorGravity="bottom|end"/>

    <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollView_profile_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <!-- See all orders button layout. -->
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_normal"
                    android:orientation="horizontal"
                    android:clickable="true"
                    android:background="?attr/selectableItemBackground"
                    android:focusable="true">

                <ImageView
                        android:layout_margin="@dimen/margin_default"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src="@drawable/ic_shopping_cart_c8_24dp"/>

                <TextView
                        android:gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textAllCaps="true"
                        android:text="@string/orders"/>
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>